--- a/RASD/main/glossary.tex
+++ b/RASD/main/glossary.tex
@@ -4,3 +4,6 @@
 \newacronym{gps}{GPS}{Global Positioning System}
 \newacronym{fifo}{FIFO}{First In First Out}
 \newacronym{api}{API}{Application Programming Interface}
+\newacronym{uml}{UML}{Unified Modeling Language}
+\newacronym{qos}{QoS}{Quality of Service}
+\newacronym{si}{SI}{International System of Units}
