--- a/RASD/main/Introduction.tex
+++ b/RASD/main/Introduction.tex
@@ -4,12 +4,14 @@
 
 \subsection{Description of the Given Problem}
 
-Our application is relative a situation of global pandemic that requires stores to help prevent the diffusion of the virus. And so, to guarantee their use in total safety. One of means to contribute to the success of this goal is to guarantee the absence of crowds. And that is the focus of our application.
-Considered one store and established the maximum number of people that is allowed to be inside, without having a crowd, our application is an instrument to keep the influx of people below that threshold.
-It works mainly managing automatically the influx of people inside the store, staggering the entrances in the store by using some parameters to keep them safe.
-This is done by offering to customers a basic service that consist in a digital lining up system. It mainly works remotely but in case it also works from a physical spot inside the store. In this way it should also help avoid having crowds outside the store. To reach the largest number of people this app should be easy to use, and its functions should work consistently in time. 
-Instead to the manager it is given a dashboard where are shown significant data like the number of people currently in the store, the status of the queue, the influx of people during different intervals of time, etc. It also allows, when it is necessary, the store manager to make decision that influences the flux of people (like for example blocking the entrances for a period or modifying some parameters value which the algorithm uses to manage the flux). 
-Furthermore, it is given to the customers a function that allow them to book a spot in the store by choosing the day and the time. This is thought to help people with limited availability during the day.
+Our application helps stores to prevent the diffusion of a virus, in a global pandemic situation, keeping customers in safety conditions.
+One of means to contribute to the success of this goal is to guarantee the absence of crowds.
+Considered one store, and established the maximum number of people that are allowed to be inside, our application is an instrument to keep the influx of people below that threshold.
+It works managing automatically the influx of people inside the store, staggering the entrances in the store by using some parameters to keep them safe.
+This is done by offering to customers a service that consist in a digital lining up system. It is designed to work remotely, but the possibility to line up physically is offered too. In this way, it should help to avoid crowds outside the store.
+Moreover, to reach the largest number of people, this application should be easy to use and its functions should work consistently in time. 
+Instead, to the manager of the store it is given a dashboard where are shown significant data like the number of people currently in the store, the status of the queue, the influx of people during different intervals of time, etc. It also allows, when it is necessary, the store manager to make decisions that influences the flux of people (like for example, blocking the entrances for a period or modifying some parameters which the algorithm uses to manage the flux). 
+Furthermore, it is given to the customers a function that allow them to book a visit to the store specifying a time slot. This is thought to help people with limited availability during the day.
 This option requires optionally at people to point out which product categories they are going to purchase or the departments they are going to visit. This is used to optimize the algorithm of the system to maximize the number of people inside the store during a certain time, by knowing their distribution. This can also be made automatically by using their data for long-time customers.
 
 
@@ -36,9 +38,10 @@ device.
 
 \section{Scope}
 
-This document will refer mainly on a single supermarket chain with some already shared services, even though it could be naturally extended to a bigger set of different supermarkets chains. Inside a store we will encounter three possible users of our application, the store manager that will manly work with statistics, the physical spot that will act as the user for the people without the app, and the customers that are people using the app.
- Our application will mainly focus on the last ones as they are the ones that will give us more information to work with and so consequently the ones that we will be more able to control and manage to respect our goals. In fact, the application will start, when they line up, to monitor and track their position and it will estimate their time of arrival, in order to have the least amount of people close to the store.
-The application will track the order of people in the digital queue by the time they line up. They will know about their position in the queue from a ticket that will be handed to them, in a digital format if the line up is done by the app or as a paper if this is done using the physical spot. Inside queue we will also consider the people that used the advance function of booking, even though it will be done in a different manner. The people that use this last function will give us additional information to enhance the precision of our model and so to better predict their behaviours and timings. 
+This document will refer mainly on a single supermarket chain with some already shared services, even though it could be naturally extended to a bigger set of different supermarkets chains. Inside a store we will encounter three possible users of our application, the store manager that will mainly work with statistics, the physical spot that will act as the user for the people without the application, and the customers that are people using the application.
+Our service is designed to work properly for all kind of the specified users, but for the different nature of the customers we can exploit more only from the users that use the application.
+For instance, the system will be able to reduce the number of customers outside the store by monitoring, tracking and estimating the needed time to arrive to the store from the position at the lining up time.
+The application will track the order of people in the digital queue by the time they line up. They will know about their position in the queue from a ticket that will be handed to them, in a digital format if the line up is done by the application or as a paper if this is done using the physical spot. Inside queue we will also consider the people that used the advance function of booking, even though it will be done in a different manner. The people that use this last function will give us additional information to enhance the precision of our model and so to better predict their behaviors and timings. 
 
 \subsection{Phenomena table}
 
@@ -90,6 +93,9 @@ The application will track the order of people in the digital queue by the time 
   Store Manager & a person who is in charge of the store. In our context, we assume that the \textit{store manager} controls the entrances to the store with the help of \gls{clup} service. In the real world scenario this activity can be delegated, without loss of generality.\\ \\
   Physical Spot & a digital device positioned outside the store that allows customers to obtain tickets to line up.\\ \\
   User & a virtual entity that interacts with the virtual service offered by \gls{clup}. The user can be a customers, a store manager and a physical spot (when it is acting as proxy). In case of ambiguous interpretations, we will specify the real entity name.\\ \\
+\end{tabularx}
+% splitting table, it was too big.
+\begin{tabularx}{\textwidth}{ >{\hsize=0.2\textwidth}X >{\hsize=0.8\textwidth}X}
   Proxy & an intermediary entity that exchanges information between two other entities. In our system, the physical spot can be seen as a proxy, since it allows customers to line up without the necessity to create an user account. From the point of view of the server, the physical spot is seen as an user.\\ \\
   Virtual Queue & a queue of users allocated in the memory of the server. When a user asks for a lining up operation, or a booking a visit operation, it is allocated in this queue.\\ \\
   Physical Queue & a queue of customers outside the store.\\ \\
@@ -109,7 +115,7 @@ The application will track the order of people in the digital queue by the time 
 \begin{tabular}{ m{0.25\textwidth} | m{0.25\textwidth} } 
 	 \textbf{Date} & \textbf{Modifications} \\
 	\hline
-	14-12-2020 & First version \\
+	\today & First version \\
 \end{tabular}
 \caption{Revision history table.}
 \label{table:revisionHistory}
@@ -127,8 +133,8 @@ The application will track the order of people in the digital queue by the time 
 \begin{itemize}
 	\item \textbf{chapter 1}: this section analyses and describes the problem assigned, and the possible phenomena involved. From them it extracts the goals of the application. It also briefly describes some general information about the document and the parts that follow.
 	\item \textbf{chapter 2}: the overall description has been reported here. In this chapter we explain the main functionalities offered by the system describing the product perspective supported by state charts and the class diagram; the user characteristics with the description of the actors that are supposed to use the application and concluding with the domain assumptions that are necessary to achieve the goals.
-	\item \textbf{chapter 3}: In this section it will be shown what was previously reported in the second section but with a higher level of details. In particular it will be shown in more detail the requirements necessary for the application both functional ones, necessary to fulfill a goal, and non-functional ones composed of the interface, functional and design ones.
-	\item \textbf{chapter 4}: In this section will be shown a model of some features of the system made in alloy. This will be mainly shown by the commented code and by images of the result produced by the alloy program.
+	\item \textbf{chapter 3}: in this section it will be shown what was previously reported in the second section but with a higher level of details. In particular it will be shown in more detail the requirements necessary for the application both functional ones, necessary to fulfill a goal, and non-functional ones composed of the interface, functional and design ones.
+	\item \textbf{chapter 4}: in this section will be shown a model of some features of the system made in alloy. This will be mainly shown by the commented code and by images of the result produced by the alloy program.
 	\item \textbf{chapter 5}: here we report the effort spent to design this document and how the activities have been divided between the authors.
 	\item \textbf{chapter 6}: list of references.
 \end{itemize}
