--- a/RASD/main/References.tex
+++ b/RASD/main/References.tex
@@ -1,1 +1,6 @@
 \chapter{References}
+
+\begin{itemize}
+	\item Specification document: "R \& DD Assignment AY2020-2021.pdf".
+	\item Slides of the lectures.
+\end{itemize}
