--- a/RASD/main/OverallDescription.tex
+++ b/RASD/main/OverallDescription.tex
@@ -15,7 +15,7 @@ The image~\ref{figure:UML} shows the mock-up of the system made in \gls{uml}. Th
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1.0\textwidth]{images/uml.jpg}
+	\includegraphics[width=1.0\textwidth]{images/UML.pdf}
 	\caption{Class diagram.}
 	\label{figure:UML}
 \end{figure}
@@ -65,7 +65,7 @@ To book a visit, customers should select the corresponding button from the menu 
 As for the lining up operation, customers can check the status and the obtained QR code.
 
 From the point of view of the server, the behavior is similar to the lining up, but in this case it can infer more information from the category of grocery specified, such as the section in the store that will be visited by the customer. If not specified, the server can infer information from previous purchases.
-In any case, the server can allocate users in a finer way in the virtual queue exploiting these data: knowing the maximum capacity of the store and the section with higher density of customers, it can decide if an user has to be allocated in one or another slot of time.
+In any case, the server can allocate users in a finer way in the virtual queue exploiting these data: knowing the maximum capacity of the store and the section with higher density of customers, it can decide if an user has to be allocated in one or another time slot.
 
 \subsection{Lining Up from Physical Spot}
 If a customer hasn't an user account, or if he doesn't want to use (or can't use) the smartphone application, he can line up from a physical spot installed outside the store.
@@ -98,7 +98,7 @@ The actors in our application are the following:
 
 \section{Assumptions, Dependencies and Constraints}
 
-Below has been reported the list of our domain assumptions.
+Below, the list of our domain assumptions has been reported.
 
 \begin{itemize}
 
