DD new diagrams

--- a/DD/main/ArchitecturalDesign.tex
+++ b/DD/main/ArchitecturalDesign.tex
@@ -44,6 +44,24 @@
 	\caption{Lining Up sequence diagram.}
 \end{figure}
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/bookingVisit_sequence_diagram.pdf}
+	\caption{Booking a Visit sequence diagram.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/scheduler_sequence_diagram.pdf}
+	\caption{Scheduler sequence diagram.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/dynamicScheduler_sequence_diagram.pdf}
+	\caption{Dynamic Scheduler sequence diagram.}
+\end{figure}
+
 \section{Component Interfaces}
 
 \section{Selected Architectural Styles and Patterns}
