DD new diagrams

--- a/DD/main/ArchitecturalDesign.tex
+++ b/DD/main/ArchitecturalDesign.tex
@@ -50,16 +50,34 @@
 	\caption{Booking a Visit sequence diagram.}
 \end{figure}
 
-\begin{figure}[H]
+\begin{sidewaysfigure}
 	\centering
 	\includegraphics[width=1.0\textwidth]{images/scheduler_sequence_diagram.pdf}
 	\caption{Scheduler sequence diagram.}
+\end{sidewaysfigure}
+
+\begin{sidewaysfigure}
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/dynamicScheduler_sequence_diagram.pdf}
+	\caption{Dynamic Scheduler sequence diagram.}
+\end{sidewaysfigure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/controlQueue_sequence_diagram.pdf}
+	\caption{Control Queue sequence diagram.}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1.0\textwidth]{images/dynamicScheduler_sequence_diagram.pdf}
-	\caption{Dynamic Scheduler sequence diagram.}
+	\includegraphics[width=1.0\textwidth]{images/showStats_sequence_diagram.pdf}
+	\caption{Show Stats sequence diagram.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{images/qrCodeChecking_sequence_diagram.pdf}
+	\caption{QR Code Checking sequence diagram.}
 \end{figure}
 
 \section{Component Interfaces}
