DD new diagrams

--- a/DD/main/ArchitecturalDesign.tex
+++ b/DD/main/ArchitecturalDesign.tex
@@ -50,17 +50,17 @@
 	\caption{Booking a Visit sequence diagram.}
 \end{figure}
 
-\begin{sidewaysfigure}
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=1.0\textwidth]{images/scheduler_sequence_diagram.pdf}
 	\caption{Scheduler sequence diagram.}
-\end{sidewaysfigure}
+\end{figure}
 
-\begin{sidewaysfigure}
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=1.0\textwidth]{images/dynamicScheduler_sequence_diagram.pdf}
 	\caption{Dynamic Scheduler sequence diagram.}
-\end{sidewaysfigure}
+\end{figure}
 
 \begin{figure}[H]
 	\centering
