--- a/DD/DD.tex
+++ b/DD/DD.tex
@@ -105,7 +105,7 @@
 %*******************************************************
 % Glossario
 %*******************************************************
-\glsaddall
-\printglossary[type=\acronymtype,title={Glossary}]
+% \glsaddall
+% \printglossary[type=\acronymtype,title={Glossary}]
 
 \end{document}
