--- a/DD/main/glossary.tex
+++ b/DD/main/glossary.tex
@@ -1,6 +1,11 @@
-% dai conops
 \newacronym{clup}{CLup}{Customers Line-up}
 \newacronym{dpcm}{d.P.C.m}{\textit{"decreto del Presidente del Consiglio dei ministri"}}
 \newacronym{gps}{GPS}{Global Positioning System}
 \newacronym{fifo}{FIFO}{First In First Out}
 \newacronym{api}{API}{Application Programming Interface}
+\newacronym{uml}{UML}{Unified Modeling Language}
+\newacronym{qos}{QoS}{Quality of Service}
+\newacronym{si}{SI}{International System of Units}
+\newacronym{mvc}{MVC}{Model-View-Controller}
+\newacronym{json}{JSON}{JavaScript Object Notation}
+\newacronym{dbms}{DBMS}{Database Management System}
